[tool.poetry]
name = "quick-flight-cache"
version = "0.1.0"
description = "A simple flight search tool with caching capabilities"
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "quick_flight_cache"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
